<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/updatePassPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/restaurantButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/ic_restaurant"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

    <TextView
        android:id="@+id/label"
        android:layout_width="245dp"
        android:layout_height="68dp"
        android:layout_marginBottom="424dp"
        android:fontFamily="serif"
        android:text="@string/lepaking"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBot"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/restaurantButton"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/email"
        android:layout_width="338dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_email_icon"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/label" />

    <EditText
        android:id="@+id/password"
        android:layout_width="338dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:drawableStart="@drawable/custom_lock_icon"
        android:background="@drawable/custom_input"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/signupPrompt"
        android:layout_width="68dp"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:text="@string/sign_up"
        android:textColor="#17267A"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBot"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/signinButton"
        app:layout_constraintVertical_bias="0.035" />

    <Button
        android:id="@+id/signinButton"
        android:layout_width="341dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_button"
        android:text="@string/sign_in"
        android:textColor="#FFFEFE"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/PrompText"
        android:layout_width="142dp"
        android:layout_height="26dp"
        android:layout_marginTop="24dp"
        android:text="@string/not_yet_register"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBot"
        app:layout_constraintEnd_toStartOf="@+id/signupPrompt"
        app:layout_constraintHorizontal_bias="0.775"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/signinButton"
        app:layout_constraintVertical_bias="0.034" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="391dp"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="10dp"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="715dp"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>