<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="415dp"
        android:layout_height="81dp"
        android:background="#FFFFFF"
        android:backgroundTint="#457853BC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466"
        app:srcCompat="@drawable/clear" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="69dp"
        android:layout_height="80dp"
        android:background="#FFFFFF"
        android:backgroundTint="#7054B1"
        app:layout_constraintBottom_toBottomOf="@+id/restaurant_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/restaurant_name1_txt"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/clear" />

    <TextView
        android:id="@+id/restaurant_name1_txt"
        android:layout_width="263dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:text="@string/subaidah"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="18dp"
        android:layout_height="17dp"
        android:foregroundTint="#00FFFFFF"
        android:foregroundTintMode="add"
        android:hapticFeedbackEnabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/restaurant_link"
        app:layout_constraintEnd_toEndOf="@+id/customerNo1_txt"
        app:layout_constraintStart_toStartOf="@+id/customerNo1_txt"
        app:layout_constraintTop_toBottomOf="@+id/customerNo1_txt"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_restaurant_validate_customer" />

    <TextView
        android:id="@+id/customerNo1_txt"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/_20"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView14"
        app:layout_constraintStart_toStartOf="@+id/imageView14"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="24dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/todo"
        android:translationY="-2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_name1_txt"
        app:srcCompat="@drawable/ic_restaurant_menu_price_range" />

    <TextView
        android:id="@+id/price1_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/cheap"
        android:translationX="2dp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_name1_txt" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toEndOf="@+id/price1_txt"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_name1_txt"
        app:srcCompat="@drawable/ic_restaurant_type" />

    <TextView
        android:id="@+id/type1_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:text="@string/western"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_name1_txt" />

    <ImageButton
        android:id="@+id/restaurant_link"
        android:layout_width="397dp"
        android:layout_height="96dp"
        android:backgroundTint="#008E67C8"
        android:hapticFeedbackEnabled="true"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/clear" />

</androidx.constraintlayout.widget.ConstraintLayout>