<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signupPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/signupText"
        android:layout_width="245dp"
        android:layout_height="68dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBot"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
        app:layout_constraintVertical_bias="0.247" />

    <EditText
        android:id="@+id/newEmail"
        android:layout_width="338dp"
        android:layout_height="54dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_email_icon"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/signupText" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="338dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock_icon"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/newEmail" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="176dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button"
        android:text="@string/next"
        android:textColor="#FFFEFE"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/newPassword" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="391dp"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="715dp"
        app:layout_constraintGuide_percent="0.95" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:layout_marginBottom="69dp"
        app:layout_constraintBottom_toBottomOf="@+id/signupText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>